Create evaluation result data for Dashboards
Signed-off-by: Alexey Rodriguez Yakushev <alexey.rodriguez@gmail.com>